@@ -1,6 +1,11 @@
 === rmw ChangeLog ===
 rmw ChangeLog
 
+2018-11-11
+
+* rmw will warn the user about invalid or unknown options if it finds any
+  in the config file (instead of just ignoring it).
+
 2018-11-06
 
 * If there is no default configuration file present, one will be
